--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'application'
 
 jar {
-	baseName = 'Eforcers Stock Farmacy System'
+	baseName = 'pharmacy Stock'
 	version = '0.0.1-SNAPSHOT'
 }
 sourceCompatibility = 1.8
@@ -26,11 +26,12 @@ repositories {
 	mavenCentral()
 }
 
-mainClassName = "com.eforcers.esfs.EforcersStockFarmacySystemApplication"
+mainClassName = "com.eforcers.esfs.Main"
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.liquibase:liquibase-core')
+	compile('com.miglayout:miglayout:3.7.2:swing@jar')
 	runtime('com.h2database:h2')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
