fixed problem with spring context

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-spring.h2.console.enabled=true
+spring.h2.console.enabled=true //Enable the console.
+spring.h2.console.path=/h2-console //Path at which the console will be available.
 logging.level.org.hibernate.SQL=debug
