added csv to fill database added logic to save button

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.jpa.hibernate.ddl-auto=validate
 spring.h2.console.enabled=true //Enable the console.
 spring.h2.console.path=/h2-console //Path at which the console will be available.
+
 logging.level.org.hibernate.SQL=debug
