--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,2 +1,5 @@
-spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=validate
+spring.h2.console.enabled=true //Enable the console.
+spring.h2.console.path=/h2-console //Path at which the console will be available.
+
 logging.level.org.hibernate.SQL=debug
